--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -23,7 +23,7 @@
 	
 
     <blockquote>
-      <a href = "https://en.wikipedia.org/wiki/Ada_Lovelace"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
+      <a href = "https://en.wikipedia.org/wiki/Bob_the_Builder"><img src = "http://www.gstatic.com/tv/thumb/tvbanners/8716307/p8716307_b_v8_ac.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
       "The <a href = "https://www.fourmilab.ch/babbage/sketch.html">Analytical
       Engine</a> has no pretensions whatever to <i>originate</i>
